force-app/main/default/objects/Transaction__c/fields/PaymentTypeImage__c.field-meta.xml
<CustomField>
    <fullName>PaymentTypeImage__c</fullName>
    <formula>IMAGE( CASE( Payment_Type__c ,
&quot;Visa&quot;,&quot;/resource/master_icon&quot;, 
&quot;MasterCard&quot;, &quot;/resource/visa_icon&quot;,
&quot;/img/samples/flag_red.gif&quot;) 
,&quot;card type&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PaymentTypeImage</label>
    <type>Text</type>
</CustomField>