force-app/main/default/objects/Transaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>active</fullName>
            </value>
            <value>
                <fullName>closed</fullName>
            </value>
            <value>
                <fullName>cancelled</fullName>
            </value>
            <value>
                <fullName>archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>