force-app/main/default/objects/Transaction__c/listViews/Transaction.listView-meta.xml
<ListView>
    <fullName>Transaction</fullName>
    <columns>NAME</columns>
    <columns>Payment_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Mine</filterScope>
    <label>Transaction</label>
</ListView>