force-app/main/default/objects/Transaction__c/listViews/TransactionListView.listView-meta.xml
<ListView>
    <fullName>TransactionListView</fullName>
    <columns>PaymentTypeImage__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Mine</filterScope>
    <label>TransactionListView</label>
</ListView>